# brdata

./: .gitignore  404.html  CONTRIBUTING.md  LICENSE  Makefile  README.md  __init__.py  build-docs.sh  download_b3_indexes.py  index.html  main.py  mkdocs.yml  pyproject.toml  sitemap.xml  temp.ipynb  tmp.ipynb
.github/workflows/: docs.yml  release.yml
brdata/: __init__.py  b3.py  fundamentus.py  statusinvest.py  utils.py  valor.py  xpi.py
brdata/core/: crawler.py  exceptions.py  req.py
brdata/crawlers/: __init__.py  cvm.py  valor.py  xpi.py
brdata/cvm/: __init__.py  _base.py  _utils.py  download.py  fca.py  fre.py  processors.py  reader.py
core/: index.html
core.crawler/: index.html
core.exceptions/: index.html
core.req/: index.html
crawlers/: index.html
crawlers.cvm/: index.html
crawlers.valor/: index.html
crawlers.xpi/: index.html
docs/: README.md  core.crawler.md  core.exceptions.md  core.md  core.req.md  crawlers.cvm.md  crawlers.md  crawlers.valor.md  crawlers.xpi.md
examples/: xpi.ipynb
search/: search_index.json
src/: __init__.py
src/brdata/: __init__.py  b3.py  bacen.py  cvm.py
src/brdata/b3/: __init__.py  b3.py  history.py  indexes.py
src/brdata/bacen/: __init__.py  boletim_focus.py  currency.py  selic.py  utils.py
src/brdata/cvm/: cvm.py
tests/: _test_xpi.py  test_b3.py  test_b3_history.py  test_b3_indexes.py  test_bacen_boletim_focus.py  test_bacen_currency.py  test_bacen_selic.py  test_cvm.py  test_fundamentus.py  test_statusinvest.py  test_valor.py  test_xpi.py
tests/resources/: valor.json
tests/test_crawlers/: test_cvm.py  test_valor.py  test_xpi.py
