[project]
name = "brdata"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "guarisadavi", email = "guarisadavi@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
    "requests>=2.33.1",
    "tqdm>=4.67.3",
    "typing>=3.10.0.0",
]

[build-system]
requires = ["uv_build>=0.11.1,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
pythonpath = ["src"]