[project]
name = "brasil-data"
version = "2.1.0"
description = "Brazilian financial market data sources"
readme = "README.md"
authors = [
    { name = "gabrielguarisa", email = "gabrielguarisa@gmail.com" },
    { name = "daviguarisa", email = "guarisadavi@gmail.com" }
]
requires-python = ">=3.11" 
dependencies = [
    "beautifulsoup4>=4.12.0",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.33.1",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/brdata"] 

[tool.pytest.ini_options]
pythonpath = ["src"]
